[java-compiler] IDEA-290373 Check sensitivity for reference index.
- Use root to check case-sensitivity by default

GitOrigin-RevId: 1ee64c32753f049d518aec51b48ab266a4a881b2